# rekordbox-plexamp-sync

./: .gitignore  BUILD.md  MANIFEST.in  PACKAGING.md  QUICKSTART.md  README.md  __init__.py  app.py  go.mod  go.sum  logger.py  main.go  pyproject.toml  requirements.txt  setup.py  test_install.py
examples/: build_with_pyinstaller.sh  menubar_app_example.py  setup_py2app.py  standalone_menubar_app.py
